--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-# requirements.txt
-
 streamlit==1.43.0
-pandas==2.2.3
-matplotlib==3.10.1
-seaborn==0.13.2
-plotly==6.0.0
-openpyxl==3.1.5
-xlsxwriter==3.2.2
-numpy==2.2.3
-reportlab==4.1.0
+fpdf==1.7.2
+pandas==2.2.0
+matplotlib==3.7.1
+seaborn==0.12.2
+plotly==5.14.1
+openpyxl==3.1.2
+xlsxwriter==3.1.0
+numpy==1.24.3
+reportlab==4.0.4
 PyPDF2==3.0.1
-requests==2.32.3
-pymongo==4.11.1
-qrcode==8.0
+requests==2.31.0
+pymongo==4.5.0
+qrcode==7.4.2
+pillow==9.5.0
