--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-streamlit==1.43.0
-fpdf==1.7.2
-pandas==2.2.0
-matplotlib==3.7.1
-seaborn==0.12.2
-plotly==5.14.1
-openpyxl==3.1.2
-xlsxwriter==3.1.0
-numpy==1.24.3
-reportlab==4.0.4
-PyPDF2==3.0.1
-requests==2.31.0
-pymongo==4.5.0
-qrcode==7.4.2
+streamlit>=1.28.0,<1.44.0
+fpdf>=1.7.2
+pandas>=2.0.0,<2.3.0
+matplotlib>=3.7.0,<3.8.0
+seaborn>=0.12.0,<0.13.0
+plotly>=5.14.0,<5.15.0
+openpyxl>=3.1.0,<3.2.0
+xlsxwriter>=3.0.0,<3.2.0
+numpy>=1.24.0,<1.25.0
+reportlab>=4.0.0,<4.1.0
+PyPDF2>=3.0.0,<3.1.0
+requests>=2.31.0,<2.32.0
+pymongo>=4.5.0,<4.6.0
+qrcode>=7.4.0,<7.5.0
 pillow>=9.5.0,<10.0.0
