--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ seaborn>=0.12.0,<0.13.0
 plotly>=5.14.0,<5.15.0
 openpyxl>=3.1.0,<3.2.0
 xlsxwriter>=3.0.0,<3.2.0
-numpy>=1.24.0,<1.25.0
+numpy>=1.26.0
 reportlab>=4.0.0,<4.1.0
 PyPDF2>=3.0.0,<3.1.0
 requests>=2.31.0,<2.32.0
