--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,6 @@ PyPDF2>=3.0.0,<3.1.0
 requests>=2.31.0,<2.32.0
 pymongo>=4.5.0,<4.6.0
 qrcode>=7.4.0,<7.5.0
-pillow>=9.5.0,<10.0.0
+pillow==9.5.0
+PyMuPDF==1.22.5  # for fitz
+scikit-learn>=1.3.0  # for sklearn
