--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ pymongo>=4.5.0,<4.6.0
 qrcode>=7.4.0,<7.5.0
 pillow==9.5.0
 PyMuPDF==1.22.5
+python-magic-bin==0.4.14; platform_system == "Windows"
 scikit-learn>=1.3.0
 pywin32; platform_system == "Windows"
 win32printing; platform_system == "Windows"
