--- a/requirements.txt
+++ b/requirements.txt
@@ -17,5 +17,5 @@ pillow==9.5.0
 PyMuPDF==1.22.5
 python-magic-bin==0.4.14; platform_system == "Windows"
 scikit-learn>=1.3.0
-pywin32; platform_system == "Windows"
-win32printing; platform_system == "Windows"
+scipy>=1.11.0
+statsmodels>=0.14.0
