--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,16 @@
-streamlit>=1.28.0,<1.44.0
-fpdf>=1.7.2
-pandas>=2.0.0,<2.3.0
-matplotlib>=3.7.0,<3.8.0
-seaborn>=0.12.0,<0.13.0
-plotly>=5.14.0,<5.15.0
-openpyxl>=3.1.0,<3.2.0
-xlsxwriter>=3.0.0,<3.2.0
-numpy>=1.26.0
-reportlab>=4.0.0,<4.1.0
-PyPDF2>=3.0.0,<3.1.0
-base64io>=1.0.3
-requests>=2.31.0,<2.32.0
-pymongo>=4.5.0,<4.6.0
-qrcode>=7.4.0,<7.5.0
-pillow==9.5.0
-PyMuPDF==1.22.5
-python-magic-bin==0.4.14; platform_system == "Windows"
-scikit-learn>=1.3.0
-scipy>=1.11.0
-statsmodels>=0.14.0
+# requirements.txt
+
+streamlit==1.43.0
+pandas==2.2.3
+matplotlib==3.10.1
+seaborn==0.13.2
+plotly==6.0.0
+openpyxl==3.1.5
+xlsxwriter==3.2.2
+numpy==2.2.3
+reportlab==4.1.0
+PyPDF2==3.0.1
+requests==2.32.3
+pymongo==4.11.1
+qrcode==8.0
+pillow==10.0.0
