--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
-# requirements.txt
-
-streamlit==1.43.0
-pandas==2.2.3
-matplotlib==3.10.1
-seaborn==0.13.2
-plotly==6.0.0
-openpyxl==3.1.5
-xlsxwriter==3.2.2
-numpy==2.2.3
-reportlab==4.1.0
-PyPDF2==3.0.1
-requests==2.32.3
-pymongo==4.11.1
-qrcode==8.0
+streamlit>=1.22.0
+pandas>=1.5.3
+openpyxl>=3.1.2
+reportlab>=3.6.12
+PyPDF2>=3.0.1
+pillow>=9.0.0
+matplotlib>=3.5.0
+numpy>=1.22.0
+xlsxwriter>=3.0.3
+python-dotenv>=0.19.0
+email-validator>=1.1.3
+# Additional dependencies
+pdfplumber>=0.7.0  # For PDF text extraction
+secure-smtplib>=0.1.1  # Enhanced SMTP library for email
+altair>=4.2.0  # For interactive visualizations in Streamlit
+streamlit-aggrid>=0.3.3  # For enhanced data tables (useful for search functionality)
