--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,32 @@
+# Core dependencies
 streamlit>=1.22.0
 pandas>=1.5.3
+numpy>=1.24.3
+
+# Excel handling
 openpyxl>=3.1.2
+xlrd>=2.0.1
+
+# PDF generation and handling
 reportlab>=3.6.12
 PyPDF2>=3.0.1
-pillow>=9.0.0
+
+# Email functionality
+python-dotenv>=1.0.0  # Note: This appears twice in your file
+
+# Windows-specific dependencies (only installed on Windows systems)
+pywin32>=306; platform_system == "Windows"
+
+# Image processing (for logos, etc.)
+Pillow>=9.5.0
+
+# Date handling
+python-dateutil>=2.8.2
 matplotlib>=3.5.0
-numpy>=1.22.0
 xlsxwriter>=3.0.3
-python-dotenv>=0.19.0
+# python-dotenv>=0.19.0  # Duplicate entry - commented out
 email-validator>=1.1.3
+
 # Additional dependencies
 pdfplumber>=0.7.0  # For PDF text extraction
 secure-smtplib>=0.1.1  # Enhanced SMTP library for email
