Add scikit-learn dependency for predictive analytics

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ PyPDF2>=3.0.1
 fpdf>=1.7.2  # Added for PDF generation
 
 # Email functionality
-python-dotenv>=1.0.0  # Note: This appears twice in your file
+python-dotenv>=1.0.0
 
 # Windows-specific dependencies (only installed on Windows systems)
 pywin32>=306; platform_system == "Windows"
@@ -25,7 +25,6 @@ Pillow>=9.5.0
 python-dateutil>=2.8.2
 matplotlib>=3.5.0
 xlsxwriter>=3.0.3
-# python-dotenv>=0.19.0  # Duplicate entry - commented out
 email-validator>=1.1.3
 
 # Additional dependencies
@@ -36,3 +35,6 @@ streamlit-aggrid>=0.3.3  # For enhanced data tables (useful for search functiona
 
 # Add Plotly for analytics dashboard
 plotly>=5.10.0
+
+# Machine learning dependencies
+scikit-learn>=1.0.2  # For predictive analytics
